--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       <li>충돌</li>
       <li>충돌 해결</li>
       <li>원격 저장소</li>
-      <li>마스터 작업</li>
+      <li>원격 저장소</li>
+      <li>sync.1st</li>
       <li>협업</li>
       <li>push_1st</li>
     </ul>
