<li>stash 후 작업</li> 추가

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <li>충돌_2</li>
       <li>외부도구(FileMerge).master</li>
       <li>외부도구(FileMerge).실험4</li>
+      <li>stash 후 작업</li>
     </ul>
   </body>
 </html>
