--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <li>외부도구(FileMerge).master</li>
       <li>외부도구(FileMerge).실험4</li>
       <li>stash 후 작업</li>
+      <li>stash 복구</li>
     </ul>
   </body>
 </html>
